Adjusted position of the item side menu to avoid overlap with extra tall result box. Added CENTRAL_PACKAGE to repo for convenience.

--- a/primo-explore/custom/WU/css/custom1.css
+++ b/primo-explore/custom/WU/css/custom1.css
@@ -1,6 +1,5 @@
 /* primary color hook */
-/* Generated from colors.json.
-   See https://github.com/ExLibrisGroup/primo-explore-package/tree/master/VIEW_CODE/css */
+/* commenttttt*/
 .md-button {
   color: #3a3a3a; }
   .md-button:hover:not([disabled]), .md-button:focus:not([disabled]), .md-button.hovered:not([disabled]), .md-button.md-focused:not([disabled]), .md-button._md-focused:not([disabled]) {
@@ -869,175 +868,177 @@ md-list.prm-list.prm-linkable-list-items .md-button.arrow-link-button md-list-it
   .prm-dark.prm-hue1 {
     color: black; }
 
+/* primary color hook end*/
+
 /* Willamette customizations */
 body {
-  background-color: #f9f9f9;
+    background-color: #f9f9f9;
 }
 /* Item brief result summary could use a container. */
 prm-brief-result-container {
-  background-color: #ffffff;
-  border: 1px solid #dddddd;
-  min-height: 170px;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    min-height: 170px;
 }
 /* Lighten up the main content area, but leave a bit of grey for contrast. */
 md-content.main {
-  background-color: #f9f9f9;
+    background-color: #f9f9f9;
 }
 /* The item side menu is uses absolute position and needs to be lower
    to avoid overlap with the result box. */
-.prm-full-view-dialog prm-full-view .services-index-under {
-  top: 220px;
+.prm-full-view-dialog prm-full-view .services-index-under,
+prm-full-view-cont prm-full-view .services-index-under {
+    top: 246px;
 }
 /* Override dark primary color for opaque background. */
 md-backdrop.md-opaque {
-  background-color: #757575;
+    background-color: #757575;
 }
-
 /* Styles for customizations. */
 
 /* Override for SMS button. */
 .md-button.md-primary:hover:not([disabled]), .md-button.md-primary:focus:not([disabled]), .md-button.md-primary.hovered:not([disabled]), .md-button.md-primary.md-focused:not([disabled]), .md-button.md-primary._md-focused:not([disabled]) {
-  color: white;
-  background-color: #000000; }
+    color: white;
+    background-color: #000000; }
 
 .chat-button-container {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  border: none;
-  z-index: 200;
-  background-color: #ba0c2f;
-  padding-right: 14px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    border: none;
+    z-index: 200;
+    background-color: #ba0c2f;
+    padding-right: 14px;
 }
 .chat-tab {
-  border: none;
-  background: #043d52;
-  color: #ffffff;
-  padding: 10px;
-  font-size: 1rem;
-  border-radius: 3px 3px 0 0;
+    border: none;
+    background: #043d52;
+    color: #ffffff;
+    padding: 10px;
+    font-size: 1rem;
+    border-radius: 3px 3px 0 0;
 
 }
 .chat-frame-wrap {
-  position: fixed;
-  bottom: 6em;
-  right: 6em;
-  border: 0 none;
-  z-index: 200;
+    position: fixed;
+    bottom: 6em;
+    right: 6em;
+    border: 0 none;
+    z-index: 200;
 }
 .chat-container {
-  width: 290px;
-  position: relative;
-  background: #e2e2e2;
-  padding: 35px 8px 8px;
+    width: 290px;
+    position: relative;
+    background: #e2e2e2;
+    padding: 35px 8px 8px;
 }
 .chat-close{
-  border: 0 none;
-  background: #ffffff;
-  font-size: 1rem;
-  border-radius: 50%;
-  position: absolute;
-  right: 4px;
-  top: 2px;
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
-  padding: 0;
+    border: 0 none;
+    background: #ffffff;
+    font-size: 1rem;
+    border-radius: 50%;
+    position: absolute;
+    right: 4px;
+    top: 2px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    padding: 0;
 }
 .chat-close:hover {
-  color: #027bc2;
+    color: #027bc2;
 }
 .chat-frame-wrap{
-  width: 275px;
+    width: 275px;
 }
 .chat-frame{
-  width: 275px;
-  height: 300px;
-  vertical-align: bottom;
-  border-radius: 3px 3px 0 0;
+    width: 275px;
+    height: 300px;
+    vertical-align: bottom;
+    border-radius: 3px 3px 0 0;
 }
 .section-content .md-chip a {
-  color: #3d6e94;
+    color: #3d6e94;
 }
 /* Fix sizing of resource icons in IE */
 div.result-item-image > div.media-content-images {
-  max-height: 60px;
+    max-height: 60px;
 }
 /* Resource Request Fixes */
 
 div#resourceInformationHeader {
-  display: none;
+    display: none;
 }
 
 #deliveryInformationHeader h2 {
-  display: none;
+    display: none;
 }
 /* bookplate hide */
 .bookplate {
-  display: none;
+    display: none;
 }
 /*Prefix publication dates with "Publication date: "*/
 span[data-field-selector="creationdate"] {
-  display: block;
+    display: block;
 }
 span[data-field-selector="creationdate"]::before {
-  content: "Publication date: ";
+    content: "Publication date: ";
 }
 /*Prefix edition info with "Edition: "*/
 span[data-field-selector="edition"] {
-  display: block;
+    display: block;
 }
 span[data-field-selector="edition"]::before {
-  content: "Edition: ";
+    content: "Edition: ";
 }
 /*Hide peer_reviewed text notice*/
 span[data-field-selector="lds50"] {
-  display: none;
+    display: none;
 }
 
 /*Hide other library collections*/
 prm-record-collection-paths {
-  display: none;
+    display: none;
 }
 .facet-to-left .page-nav, .facet-to-left prm-page-nav-menu {
-  left: inherit;
-  right: 1em;
-  direction: rtl;
-  margin-bottom: 20px;
+    left: inherit;
+    right: 1em;
+    direction: rtl;
+    margin-bottom: 20px;
 }
 
 /* Hide URL option Text Call Number and hide the display of the "Phone number and provider are required" */
 #smsLinkContainer {display: none;}
 #smsError {
-  display: none;
-  background-color: #ffffcc;
-  padding: .5rem .5rem 0.17rem .5rem;
-  margin: 0 0 1rem 0;
+    display: none;
+    background-color: #ffffcc;
+    padding: .5rem .5rem 0.17rem .5rem;
+    margin: 0 0 1rem 0;
 }
 #smsForm md-input-container {display:flex;}
 #HathiTrust
 span.umnHathiTrustLink {
-  margin-left: -5px;
+    margin-left: -5px;
 }
 span.umnHathiTrustLink md-icon svg {
-  height: 1.2em;
-  filter: grayscale(100%);
+    height: 1.2em;
+    filter: grayscale(100%);
 }
 span.umnHathiTrustLink:hover md-icon svg {
-  filter: grayscale(0%);
+    filter: grayscale(0%);
 }
 /** External Search Facet **/
 /* All facet groups */
 #facets .available-facets {
-  order: 3;
+    order: 3;
 }
 /* The availability facet */
 #facets .available-facets:nth-child(5) {
-  order: 1;
+    order: 1;
 }
 /* The External Search facet */
 #facets .available-facets:nth-child(4) {
-  order: 5;
+    order: 5;
 }
 
 /** COVID-19 Summit Stopped Warning **/
@@ -1052,22 +1053,22 @@ span.umnHathiTrustLink:hover md-icon svg {
 /* Styles for COVID banner */
 /* Clear advanced search screen backdrop so shadow shows from menu bar */
 prm-search-bar .advanced-search-backdrop {
-  background-color: transparent;
+    background-color: transparent;
 }
 /*Make Switch to Simple Search Button White*/
 div.search-switch-buttons.hide-xs.layout-sm-column.layout-align-sm-start-stretch.facet-to-left-advanced-search button {
-  color: #fff;
+    color: #fff;
 }
 div.covidBanner {
-  width: 80%;
-  max-width: 960px;
-  margin: auto;
-  margin-top: 1.5em;
-  background-color: white;
-  padding: 0.5em 3em;
-  box-shadow: 0 0 10px 2px rgba(0,0,0,0.2);
-  color: #333;
-  font-size: 20px;
+    width: 80%;
+    max-width: 960px;
+    margin: auto;
+    margin-top: 1.5em;
+    background-color: white;
+    padding: 0.5em 3em;
+    box-shadow: 0 0 10px 2px rgba(0,0,0,0.2);
+    color: #333;
+    font-size: 20px;
 }
 /*div.covidBanner a {
     color: #c22033;
@@ -1081,13 +1082,13 @@ div.covidBanner a:focus {
 }*/
 
 @media only screen and (max-width: 40em) {
-  .chat-frame-wrap {
-    right: 1.5rem;
-  }
-  body.md-dialog-is-showing .chat-bottom-padding {
-    bottom: 0 !important;
-  }
-  .default-card {
-    display: none;
-  }
+    .chat-frame-wrap {
+        right: 1.5rem;
+    }
+    body.md-dialog-is-showing .chat-bottom-padding {
+        bottom: 0 !important;
+    }
+    .default-card {
+        display: none;
+    }
 }
